noinst_LIBRARIES = libmicrosimtls.a

libmicrosimtls_a_SOURCES = \
MSActuatedTrafficLightLogic.cpp MSActuatedTrafficLightLogic.h \
MSAgentbasedTrafficLightLogic.cpp MSAgentbasedTrafficLightLogic.h \
MSOffTrafficLightLogic.cpp MSOffTrafficLightLogic.h \
MSPhaseDefinition.cpp MSPhaseDefinition.h \
MSPhasedTrafficLightLogic.cpp MSPhasedTrafficLightLogic.h \
MSSimpleTrafficLightLogic.cpp MSSimpleTrafficLightLogic.h \
MSSOTLDefinitions.h \
MSSOTLE2Sensors.cpp MSSOTLE2Sensors.h \
MSSOTLPhaseTrafficLightLogic.cpp MSSOTLPhaseTrafficLightLogic.h \
MSSOTLPlatoonTrafficLightLogic.cpp MSSOTLPlatoonTrafficLightLogic.h \
MSSOTLRequestTrafficLightLogic.cpp MSSOTLRequestTrafficLightLogic.h \
MSSOTLSensors.cpp MSSOTLSensors.h \
MSSOTLTrafficLightLogic.cpp MSSOTLTrafficLightLogic.h \
MSSwarmTrafficLightLogic.cpp MSSwarmTrafficLightLogic.h \
MSTLLogicControl.cpp MSTLLogicControl.h \
MSTrafficLightLogic.cpp MSTrafficLightLogic.h
