noinst_LIBRARIES = libmicrosimtls.a

libmicrosimtls_a_SOURCES = \
MSActuatedTrafficLightLogic.cpp MSActuatedTrafficLightLogic.h \
MSAgentbasedTrafficLightLogic.cpp MSAgentbasedTrafficLightLogic.h \
MSOffTrafficLightLogic.cpp MSOffTrafficLightLogic.h \
MSPhaseDefinition.cpp MSPhaseDefinition.h \
MSPhasedTrafficLightLogic.cpp MSPhasedTrafficLightLogic.h \
MSSimpleTrafficLightLogic.cpp MSSimpleTrafficLightLogic.h \
MSSOTLDefinitions.h \
MSSOTLE2Sensors.cpp MSSOTLE2Sensors.h \
MSSOTLPolicyDesirability.cpp MSSOTLPolicyDesirability.h \
MSSOTLPolicyStimulus.cpp MSSOTLPolicyStimulus.h \
MSSOTLPolicy.cpp MSSOTLPolicy.h \
MSSOTLMarchingPolicy.cpp MSSOTLMarchingPolicy.h \
MSSOTLCongestionPolicy.cpp MSSOTLCongestionPolicy.h \
MSSOTLPhasePolicy.cpp MSSOTLPhasePolicy.h \
MSSOTLPlatoonPolicy.cpp MSSOTLPlatoonPolicy.h \
MSSOTLRequestPolicy.cpp MSSOTLRequestPolicy.h \
MSSOTLPolicyBasedTrafficLightLogic.cpp MSSOTLPolicyBasedTrafficLightLogic.h \
MSSOTLPhaseTrafficLightLogic.cpp MSSOTLPhaseTrafficLightLogic.h \
MSSOTLPlatoonTrafficLightLogic.cpp MSSOTLPlatoonTrafficLightLogic.h \
MSSOTLRequestTrafficLightLogic.cpp MSSOTLRequestTrafficLightLogic.h \
MSSOTLSensors.cpp MSSOTLSensors.h \
MSSOTLTrafficLightLogic.cpp MSSOTLTrafficLightLogic.h \
MSSOTLWaveTrafficLightLogic.cpp MSSOTLWaveTrafficLightLogic.h \
MSSOTLHiLevelTrafficLightLogic.cpp MSSOTLHiLevelTrafficLightLogic.h \
MSSwarmTrafficLightLogic.cpp MSSwarmTrafficLightLogic.h \
MSDeterministicHiLevelTrafficLightLogic.cpp MSDeterministicHiLevelTrafficLightLogic.h \
MSTLLogicControl.cpp MSTLLogicControl.h \
MSTrafficLightLogic.cpp MSTrafficLightLogic.h
