noinst_LIBRARIES = libvehicle.a

libvehicle_a_SOURCES = AStarRouter.h \
DijkstraRouterTT.h DijkstraRouterEffort.h \
GawronCalculator.h LogitCalculator.h RouteCostCalculator.h \
PedestrianRouter.h SUMOAbstractRouter.h \
SUMOVehicle.h \
SUMOVehicleParameter.cpp SUMOVehicleParameter.h \
SUMOVTypeParameter.cpp SUMOVTypeParameter.h
